--- a/docs/c01-newConceptEnglish-1/s01.md
+++ b/docs/c01-newConceptEnglish-1/s01.md
@@ -66,3 +66,36 @@ be 动词就近原则。
 > Here **are** your bags and coat.
 
 > What do you do ? 你是做什么的？
+
+## 5-6
+
+人称
+先生： Mr. Blake  
+太太： Mrs Blake  
+小姐： Miss Sophie  
+女士： Ms Sophie
+
+### 语法
+
+#### 冠词是什么？
+
+冠词是表数量的，一个，或者特指。 分为：不定冠词(a,an)，定冠词(the)  
+a,an: 使用区别是，an 修饰首字母为元音的单词。
+the: 特指某一个。
+
+#### 特殊疑问句
+
+使用了疑问词开头的疑问句。what ,why , how ,where
+
+> What make is this car ?
+
+#### 选择疑问句
+
+> Is the boy tall or short?
+
+回答选择疑问句，A or B 形式， 直接回答， A/B ，不用 Yes/No
+
+也的几种表达方式： too, either, also
+too： 肯定句，放句末。
+either： 否定句，放句末。
+also： 放句中
